# Rust-TDD-Katas

./: .gitignore  Cargo.toml  README.md  pom.xml  tcr.sh
add_two_numbers_kata/src/: day_1.rs  day_7.rs  day_8.rs
advanced_stack_kata/: Cargo.toml
advanced_stack_kata/src/: day_1.rs  day_10.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  lib.rs
algebraic_expression_parser_kata/src/: day_10.rs  day_12.rs  day_13.rs  day_14.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_9.rs
array_linked_queue_kata/src/: day_1.rs  day_10.rs  day_12.rs  day_13.rs  day_14.rs  day_2.rs  day_6.rs  day_7.rs
bad_stack/: Cargo.toml
bad_stack/src/: day_01.rs  day_03.rs  day_07.rs  day_08.rs  day_12.rs
binary_tree_kata/src/: day_01.rs  day_02.rs  day_04.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_11.rs  day_13.rs
bowling-kata/day-12/: Cargo.toml
bowling_game_kata/: Cargo.toml
bowling_game_kata/src/: day_1.rs  day_12.rs  day_3.rs  day_4.rs  day_5.rs  day_7.rs  day_8.rs  day_9.rs
bowling_kata/: Cargo.toml
bowling_kata/src/: day_13.rs  day_14.rs  day_3.rs  day_5.rs  day_9.rs  lib.rs
calculator_ast_kata/: Cargo.toml
calculator_ast_kata/src/: day_01.rs  day_05.rs  day_08.rs  day_09.rs  day_11.rs
linked_list_stack_kata/: Cargo.toml
old-katas-iteration-02/: Cargo.toml
persistent_list/: Cargo.toml
persistent_list_kata/: Cargo.toml
queue_kata/: Cargo.toml
src/: lib.rs
stack/: Cargo.toml
string_calculator_kata/: Cargo.toml
string_compression_kata/: Cargo.toml
test/: lib.rs
unsafe_deque_kata/: Cargo.toml
(+708 files in other folders)
